Saving and restoring the tests run on PyUnitView.